Add links to footer icons

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,22 +4,85 @@
 /* General Styles */
 body {
     margin: 0%;
+    font-family: Alegreya Sans, sans-serif;
+}
+
+i {
+    text-decoration: none;
+}
+
+#hero div {
+    /* Push h1 content down */
+    padding: 20px 0 20px 0;
+    /* Make h1 and nav bar readable against bkg image */
+    background: rgba(0, 0, 0, 0.6);
+}
+
+#hero nav {
+    display: none;
+}
+
+h1, h2 {
+    text-align: center;
+    margin: 0;
 }
 
 h1 {
-    text-align: center;
-    font-family: Alegreya Sans, sans-serif;
     color: azure;
 }
 
-#navbar li {
+h3 {
+    margin-bottom: 0;
+}
+
+p {
+    margin-top: 0.5rem;
+    text-align: justify;
+}
+
+header {
+    position: fixed;
+}
+
+nav {
+    display: flex;
+    flex-direction: column;
+}
+
+li {
     list-style-type: none;
+
 }
 
 /* Index Page */
 #hero {
-    position: absolute;
-    background: url("../images/three-beekeepers.jpg") no-repeat center center/cover;
+    position: relative;
+    background: url("../images/beehive-fence.jpg") no-repeat center center/cover;
     width: 100%;
     min-height: 33vh;
+}
+
+main section {
+    margin: 1rem;
+}
+
+.paragraph-images{
+    border-radius: 2%;
+}
+
+/* Footer Style */
+footer {
+    background-color: rgba(0, 0, 0, 0.8);
+}
+
+footer > ul {    
+    font-size: 150%;
+    display: flex;
+    justify-content: space-evenly;
+    margin-bottom: 0;
+    padding: 1rem;
+}
+
+footer i {
+    color: azure;
 }
