--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,8 +42,8 @@ header a, i {
 
 h1 {
     text-align: center;
-    margin: 25px 0px;
-    padding: 25px 0px;
+    margin: 15px 0px;
+    padding: 10px 0px;
     text-shadow: -6px 5px 4px black;
 }
 
@@ -57,11 +57,11 @@ header h1, header a {
 }
 
 h3 {
-    margin-bottom: 0;
+    margin-bottom: 5px;
 }
 
 p {
-    margin-top: 0.5rem;
+    margin: 0.5rem;
     text-align: justify;
 }
 
@@ -86,6 +86,12 @@ main section {
     margin: 1rem;
 }
 
+#about-us div{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .about-images {
     border-radius: 2%;
     width: 100%;
@@ -93,12 +99,17 @@ main section {
 
 hr {
     width: 90%;
+    margin: auto;
 }
 
 .invite {
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+.invite a {
+    text-align: center;
 }
 
 .invitation-images {
@@ -137,12 +148,6 @@ footer i {
 
     .about-images {
         width: 50%;
-    }
-
-    #about-us div{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
     }
 
     #short-descriptions {
