--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,7 +30,7 @@ header a, i {
     display: flex;
     justify-content: space-evenly;
     /* Solves issue of nav bar being off-centre */
-    padding: 20px;
+    padding: 0px 20px 20px;
     margin: 0px 0px 10px 0px;
     text-transform: uppercase;
     font-size: 18px;
@@ -42,7 +42,7 @@ header a, i {
 
 h1 {
     text-align: center;
-    margin: 15px 0px;
+    margin: 15px;
     padding: 10px 0px;
     text-shadow: -6px 5px 4px black;
 }
@@ -57,11 +57,11 @@ header h1, header a {
 }
 
 h3 {
-    margin-bottom: 5px;
+    margin: 5px 0px;
 }
 
 p {
-    margin: 0.5rem;
+    margin: 0.5rem 1rem;
     text-align: justify;
 }
 
@@ -83,7 +83,7 @@ li {
 }
 
 main section {
-    margin: 1rem;
+    margin: 0.5rem 1rem;
 }
 
 #about-us div{
@@ -94,7 +94,8 @@ main section {
 
 .about-images {
     border-radius: 2%;
-    width: 100%;
+    width: 90%;
+    margin: 10px;
 }
 
 hr {
