--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -195,8 +195,9 @@ li a {
 
 .shop-img {
     width: 100%;
-    padding-top: 10px;
+    margin-top: 10px;
     border-radius: 0px 0px 10px 10px;
+    box-shadow: 0px -2px 6px black;
 }
 
 .bold {
