Add form.html and inital input fields

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -208,6 +208,11 @@ li a {
     font-size: larger;
 }
 
+/* Form Page */
+form {
+    
+}
+
 /* Footer Style */
 footer {
     background-color: rgba(0, 0, 0, 0.8);
