--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -69,7 +69,7 @@ header {
     position: fixed;
 }
 
-li {
+ul li {
     list-style-type: none;
 
 }
@@ -154,8 +154,10 @@ li a {
     margin: 20px;
 }
 
-#sign-up-button p {
+#sign-up-button a {
     text-align: center;
+    text-decoration: none;
+    color: black;
     font-weight: bold;
     background-color: rgba(225,225,0,.8);
     border: 1px solid black;
