--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -129,8 +129,18 @@ hr {
 }
 
 /*Courses Page */
-#courses > ul {
-    margin: 1rem 0;
+.course-boxes {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#courses ul {
+    margin: 0.5rem 0;
+    border: 1px solid black;
+    border-radius: 15px;
+    width: 70vw;
+    padding: 5px 15px;
 }
 
 .sold {
