--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,7 +49,7 @@ h1 {
 
 h2 {
     text-align: center;
-    margin: 0;
+    margin: 20px 20px 10px;
 }
 
 header h1, header a {
@@ -276,8 +276,13 @@ footer i {
 
 /* Media query for tablets and larger: >= 768px */
 @media screen and (min-width: 768px) {
+    #hero {
+        min-height: 25vh;
+    }
+
     #navbar {
-        font-size: 25px;
+        font-size: 18px;
+        margin: 10px;
     }
 
     .main-images {
