Fix: Make image in #about-bees responsive

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -104,7 +104,7 @@ main section {
     margin: 0.5rem 1rem;
 }
 
-#about-us div{
+#about-us div, #about-bees div, .invite{
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -119,12 +119,6 @@ main section {
 hr {
     width: 90%;
     margin: auto;
-}
-
-.invite {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
 }
 
 .invite a {
@@ -291,13 +285,25 @@ footer i {
 
 /* Media query for tablets and larger: >= 768px */
 @media screen and (min-width: 768px) {
-    #hero {
-        min-height: 25vh;
-    }
+    /*#hero {
+        min-height: 25vh; IS THIS CODE NESSECARY?
+    }*/
 
     #navbar {
-        font-size: 18px;
+        font-size: 20px;
         margin: 10px;
+    }
+
+    #about-us div {
+        flex-direction: row;
+    }
+
+    #about-bees img {
+        width: -webkit-fill-available;
+        height: 25vh;
+        object-fit: cover;
+        object-position: 0% 20%;
+        border-radius: 15px 15px;
     }
 
     .main-images {
