Fix: Hide hr element in short-description section for tablets and larger

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -324,6 +324,10 @@ footer i {
         text-align: center;
     }
 
+    .hide-hr {
+        display: none;
+    }
+
     .invitation-images {
         width: 80%;
         padding: 15px;
