Add flexbox styles to arrange why divs into a 2 by 2 grid on tablets.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -365,8 +365,15 @@ footer i {
         width: -webkit-fill-available;
     }
 
-    #why div {
-        /*flex-direction: row;*/
+    #parent-why {
+        display: flex;
+        flex-wrap: wrap;
+    }
+
+    .why-div {
+        /* Arrange reasons into a grid of four divs */
+        flex-basis: 350px;
+        flex-grow: 1;
     }
 
 }
