--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -351,7 +351,7 @@ footer i {
 
     .invitation-images {
         width: 80%;
-        padding: 15px;
+        padding: 0 15px;
         border-radius: 10%;
     }
 
@@ -374,8 +374,8 @@ footer i {
         /* Arrange reasons into a grid of four divs */
         flex-basis: 350px;
         flex-grow: 1;
+        justify-content: space-between;
     }
-
 }
 
 /* Media query for Laptops and larger: >= 1200px */
