Fix: Add fixed width to courses boxes and margins to parent divs for visual consistency

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -358,11 +358,12 @@ footer i {
     /* Courses Page */
     #courses > div {
         display: flex;
-        justify-content: space-evenly;
+        justify-content: space-between;
+        margin: auto 3rem;
     }
 
     #courses ul {
-        width: -webkit-fill-available;
+        width: 240px;
     }
 
     #parent-why {
