Fix: Set min-height for bee-nectar image to display properly on all landscape mobile screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -331,6 +331,7 @@ footer i {
     .wide-crop {
         width: -webkit-fill-available;
         height: 25vh;
+        min-height: 185px;
         object-fit: cover;
         object-position: 0% 20%;
         border-radius: 15px 15px;
