--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -93,10 +93,11 @@ ul li {
     background: url("../images/beehive-fence.jpg") no-repeat center center/cover;
     width: 100%;
     min-height: 33vh;
+    box-shadow: 0px 2px 10px black;
 }
 
 main {
-    margin-top: 10px;
+    margin-top: 30px;
 }
 
 main section {
@@ -426,7 +427,7 @@ footer i {
 
     #about-bees > div {
         flex-wrap: wrap;
-        height: 330px; /* Maintains div height in line with the image height */
+        height: 350px; /* Maintains div height in line with the image height */
     }
 
     #one, #three {
@@ -440,5 +441,9 @@ footer i {
 
     .mobile {
         display: none;
+    }
+
+    footer > ul {
+        padding: 1rem 10vw;
     }
 }
