--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,7 @@
 /* General Styles */
 body {
     margin: 0%;
-    font-family: Alegreya Sans, sans-serif;
+    font-family: 'Alegreya Sans', sans-serif;
 }
 
 header a, i {
