Fix: Change course structure and courses divs to be spaced evenly in their parent div.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -378,7 +378,7 @@ footer i {
     /* Courses Page */
     #courses>div {
         display: flex;
-        justify-content: space-between;
+        justify-content: space-evenly;
         margin: auto 3rem;
     }
 
