Fix: Compress and resize images. Update aria labels in Shop.html

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -92,7 +92,7 @@ ul li {
 /* Index Page */
 #hero {
     position: relative;
-    background: url("../images/beehive-fence.jpg") no-repeat center center/cover;
+    background: url("../images/beehive-fence-720-c.webp") no-repeat center center/cover;
     width: 100%;
     min-height: 33vh;
     box-shadow: 0px 2px 10px black;
