Fix: Add styles to center text in Thank You page.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -310,6 +310,14 @@ input {
     flex-direction: column;
 }
 
+.small-page-body p {
+    text-align: center;
+}
+
+.small-page-body h3 {
+    text-align: center;
+}
+
 .small-page-footer {
     margin-top: auto;
 }
